--- a/web/studentPage/studentCategories/studentCategories.css
+++ b/web/studentPage/studentCategories/studentCategories.css
@@ -15,21 +15,36 @@ body{
 .navbar-brand{
     font-size: 25px;
     font-weight: bold;
-    margin-left: 2rem;    
+    margin-left: 2rem; 
+	color: white !important
 }
 
+/*
 .navbar a{
+    color: #dfb2b4;
+}
+
+.navbar a:hover{
     color: white !important;
+}
+*/
+
+.nav-item a{
+	color: #dfb2b4 !important;
+}
+
+.nav-item a:hover{
+	color: white !important;
 }
 
 #categories{
-    background-color:white;
+    background-color: white;
 }
 
 .category-icon{
     /*background-color: slateblue;*/
     /*border: 1px solid white;    */
-    margin: 2rem 0 2rem 5rem !important;
+    margin: 2rem 2rem 2rem 2rem !important;
     text-align: center !important;
 }
 
@@ -37,6 +52,11 @@ body{
     color: white !important;
     background-color: #253374;    
     border-radius: 8rem;
+}
+
+.category-icon a{
+	color:inherit;
+	text-decoration: none;
 }
 
 #category-heading h2{
