--- a/web/employerPage/css/jobsPosts.css
+++ b/web/employerPage/css/jobsPosts.css
@@ -77,6 +77,13 @@ body{
 .card-options{
     /*display:none;*/
     padding: 0.5rem;
+    width:50%;
+}
+
+.student-options{
+    /*display:inline-block;*/
+    padding: 0.5rem;
+    float:right;
 }
 
 /*.card:hover .card-options{
@@ -94,4 +101,14 @@ body{
     color: #253374 !important;
 }
 
+.modal-header{
+    background-color: #960006;
+    color: white;
+}
 
+.close{
+    color: white;
+}
+.close:hover{
+    color:white;
+}
